# moeabench

./: .antigravityignore  .gitattributes  .gitignore  API.py  AUTHORS  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  MANIFEST.in  README.md  REUSE.toml  analysis.md  audit_dpf3.py  audit_legacy.py  check_dtlz1.py  check_legacy_dtlz1.py  check_legacy_dtlz1_m10.py  check_legacy_dtlz1_m5.py  check_legacy_dtlz2_m10.py  check_legacy_dtlz2_m5.py  check_legacy_sos.py  check_report_dtlz1.py  debug_dtlz1_convergence.py  diag_modes.py  diag_nadir_shift.py  dtlz1_test.py  example-01.ipynb  example-01.py  example-02.py  example-03.py  example-04.py  example-05.py  final_output.txt  find_dpf2_mix_final.py  find_dpf2_perfect.py  find_dtlz2_mix.py  find_mix_perfect.py  find_mixed_dpf.py  find_ranks_v2.py  flake.nix  (+41 more)
MoeaBench/: BENCH_conf.py  CACHE.py  CACHE_bk_user.py  DATA_arr.py  DATA_conf.py  E_DPF.py  E_DTLZ.py  GEN_gd.py  GEN_gdplus.py  GEN_hypervolume.py  GEN_igd.py  GEN_igdplus.py  H_DPF.py  H_DTLZ.py  IPL_MoeaBench.py  I_BENCH_conf.py  I_DATA_arr.py  I_DATA_conf.py  I_DPF.py  I_DTLZ.py  I_IBENCH.py  I_MOEA.py  I_MoeaBench.py  I_UserExperiment.py  I_UserMoeaBench.py  I_constraints.py  I_memory.py  I_metric.py  MoeaBench.py  NSGA2deap.py  NU_chaos.py  RUN.py  RUN_user.py  Run.py  __init__.py  allowed_benchmark.py  analyse.py  analyse_metric_gen.py  analyse_obj.py  analyse_pareto.py  (+33 more)
aux/: ToDo.md  denoise_closeness.md  mb_add_wasserstein_distance_fields.patch  mb_fix_qscore_linear.patch  mb_q_wasserstein_calibration_all_in_one.patch  mb_qscore_loglinear_fit.patch  mb_qscore_loglinear_fit_HEAD.patch  mb_qscore_w1_delta_and_report.patch  monotonic-closeness.md
calibration/: audit_report.html
docs/: .dpf_problem.md  .ext_strat.md  .save.md  .wish.md  CONTRIBUTING.md  FR_metrics.md  SCIENTIFIC_RIGOR.md  api.md  api_cheat_sheet.py  api_sheet.md  api_sheet.py  benchmarks.md  delgado2_report.md  design.md  fair.md  fair_metrics.md  finite_resolution.md  generate_images.py  key_features.md  legacy2_optimal_report.md  legacy_report.md  mops.md  reference.md  reproducibility.md  test.md  userguide.md
examples/: MyCustomProblem_3D_v1.json  MyCustomProblem_v1.json  erase.py  erase.py~  example-01.ipynb  example-01.py  example-02.ipynb  example-02.py  example-03.ipynb  example-03.py  example-04.ipynb  example-04.py  example-05.ipynb  example-05.py  example-06.ipynb  example-06.py  example-07.ipynb  example-07.py  example-08.ipynb  example-08.py  example-09.ipynb  example-09.py  example_01.ipynb  example_01.py  example_02.ipynb  example_02.py  example_03.ipynb  example_03.py  example_04.ipynb  example_04.py  example_05.ipynb  example_05.py  example_06.ipynb  example_06.py  example_07.ipynb  example_07.py  example_08.ipynb  example_08.py  example_09.ipynb  example_09.py  (+23 more)
misc/: ToDo  audit_delgado2.py  audit_legacy2_optimal.py  audit_report_v0.7.5.md  audit_report_v0.7.5_A.md  benchmark_gallery.ipynb  check_dtlz2.py  clinical_quality_matrix.md  demo_data_extraction.py  extract_stats.py  final_verify.py  generate_dtlz8_gt.py  generate_gallery_figs.py  key_features.md  methods.md  new-api-plan.md  new-api.md  opt_report.md  py2ipynb.py  review_response.md  sandbox.ipynb  scientific_checkout.py  scientific_checkout_gallery.ipynb  scientific_checkout_gallery_executed.ipynb  test_caste2.py  update_dtlz8_fig.py  wish.md
moeabench/: __init__.py  defaults.py  progress.py  requirements.txt  system.py
optbench/: __init__.py  dpf.py  dtlz.py
(+2670 files in other folders)
