[tool.poetry]
name = "optbench"
version = "0.1.0"
description = "Mostly-automated benchmarking framework for numerical optimization engines"
authors = ["Matheus Branco Borella <mbr@lobisomem.gay>"]
license = "BSD-3-Clause"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.1"
matplotlib = "^3.9.2"
numpy = "^2.1.1"
scipy = "^1.14.1"
scipy-stubs = "^1.14.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
mypy = "^1.11.2"
isort = "^5.13.2"
ruff = "^0.6.7"

[tool.mypy]
plugins = "numpy.typing.mypy_plugin"

[tool.ruff]
line-length = 80

[tool.ruff.lint]
ignore = ["W191", "E501", "SLF001"]

# This list of lint rules was shamelessly ripped off of Pwndbg. Thanks, Pwndbg!
select = [
    "A",
    "E",
    "F",
    "W",
    "C4",
    "ISC",
    "SLOT",
    "FLY",
    "PGH",
    "RET506",
    "RET507",
    "RET508",
    "RET505",
    "SLF",
    "SIM",
    "PTH",
]

[tool.isort]
profile = "black"
add_imports = "from __future__ import annotations"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

